--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,207 @@
 .merriweather-regular {
-    font-family: "Merriweather", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+  font-family: "Merriweather", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .inter-regular {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-      "slnt" 0;
-  }
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+}
 
-body{
-    margin: 0;
+* {
+  font-family: "Inter", Verdana, Geneva, Tahoma, sans-serif;
+  color: #333;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Merriweather", "Times New Roman", Times, serif;
+  text-align: center;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+body {
+  margin: 0;
+}
+
+section{
+  margin: 8rem auto;
+}
+
+#about {
+  margin-top: 4rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.background-shape div{
+  content: "";
+  display: inline-block;
+  position: absolute;
+  overflow:hidden;
+  background-color: darkcyan;
+  transform: translate(0,calc(-100% + 60vw)) skew(0,-30deg);
+  width: 100vw;
+  height: 200vh;
+}
+
+#about img {
+  max-width: 80%;
+}
+
+#about > .personal {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.personal > h1 {
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  width: 70%;
+  margin: auto;
+  text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.5);
+}
+
+p{
+  padding: 1rem;
+}
+
+a{
+  text-decoration: none;
+}
+.links{
+ display: flex;
+ align-items: center;
+ justify-content: space-evenly;
+ max-width: 20rem;
+ margin: auto;
+}
+
+.link-icon{
+  font-size: 3rem;
+  width: 3rem;
+  height: 3rem;
+}
+img.link-icon{
+  transform: translate(0, 3px);
+  filter: invert(20%);
+}
+
+.work-card{
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+  margin: 4rem 2rem;
+  min-height: 120vw;
+}
+
+.title-row{
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+}
+
+.title-row .link-icon{
+  font-size: 2rem;
+  width: 2rem;
+  height: 2rem;
+}
+
+.title-row > h2{
+  margin: 0 auto 0 1rem;
+}
+.title-row > a{
+  margin: 0 1rem;
+}
+
+.work-card p{
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+.image-placeholder{
+  width: 100%;
+  height: 60vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-placeholder > h1{
+  font-size: 3rem;
+  color: white;
+}
+
+.work-card:nth-of-type(1) .image-placeholder{
+  background-color: #515adb;
+}
+.work-card:nth-of-type(2) .image-placeholder{
+  background-color: #db9f51;
+}
+.work-card:nth-of-type(3) .image-placeholder{
+  background-color: #51db63;
+}
+.work-card:nth-of-type(4) .image-placeholder{
+  background-color: #d651db;
+}
+.work-card:nth-of-type(5) .image-placeholder{
+  background-color: #51bbdb;
+}
+.work-card:nth-of-type(6) .image-placeholder{
+  background-color: #db5151;
+}
+
+#contact{
+  background-color: darkcyan;
+  padding: 1.5rem 1rem;
+  margin-bottom: 0;
+}
+
+#contact *{
+  color: white;
+}
+
+#contact h1{
+  color: white;
+  margin: 0;
+}
+
+#contact> p{
+  font-size: 2em;
+}
+
+.small-text{
+  margin: 1rem;
+}
+
+.small-text p {
+  padding: 0;
+  margin: 0;
+}
+
+#contact .links{
+  margin: 2rem auto;
+}
+
+footer img{
+  width: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 600px) {
+  #about{
+    
+  }
 }
