--- a/src/style.css
+++ b/src/style.css
@@ -39,12 +39,6 @@ section{
   margin: 8rem auto;
 }
 
-#about {
-  margin-top: 4rem;
-  position: relative;
-  overflow: hidden;
-}
-
 .background-shape div{
   content: "";
   display: inline-block;
@@ -56,24 +50,36 @@ section{
   height: 200vh;
 }
 
-#about img {
-  max-width: 80%;
+#about {
+  margin-top: 4rem;
+  position: relative;
+  overflow: hidden;
+  position: relative;
+  display: grid;
+  grid: auto-flow / 2rem 1fr 2rem;
 }
 
-#about > .personal {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.personal > h1 {
+#about > h2 {
+  font-size: 3rem;
+  padding: 1rem;
   text-align: right;
   position: absolute;
   bottom: 0;
-  width: 70%;
+  right: 0;
   margin: auto;
   text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.5);
+}
+
+#about > p, #about > h1, #about > .links{
+  grid-column: span 3;
+}
+
+#about > .links, #about > img{
+  width: 100%;
+}
+
+#about > img, #about > h2{
+  grid-area: 1 / 2 / 2 / 3;
 }
 
 p{
@@ -202,6 +208,6 @@ footer img{
 
 @media (max-width: 600px) {
   #about{
-    
+
   }
 }
