--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@ section {
   overflow: hidden;
   background-color: darkcyan;
   transform: translate(0, calc(-100% + 60vw)) skew(0, -30deg);
+  z-index: -1;
   width: 100vw;
   height: 200vh;
 }
@@ -211,42 +212,58 @@ footer img {
   object-fit: cover;
 }
 
+
+
 @media (min-width: 600px) {
   #about {
-    grid: 6rem auto auto auto auto / 2rem 2fr 3rem 4fr;
-    padding: 2rem;
-  }
-
-  #about > .background {
-    grid-area: 2 / 2 / 5/ 4;
+    margin: 4rem 10vw;
+    position:static;
     display: block;
-    background-color: white;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
-  }
+    overflow: visible;
 
-  #about > h1 {
-    grid-area: 2 / 3 / 4/ 5;
-  }
+    & img{
+      position: absolute;
+      top: 2rem;
+      left: 2rem;
+      width: 40vw;
+      z-index: 2;
+      box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+    }
 
-  #about > p {
-    grid-area: 3 / 2 / 6/ 5;
-  }
+    & h2 {
+      position: absolute;
+      color: #ffffff;
+      text-shadow: 0 0 5px rgba(0, 0, 0, 0.75) ,0 0 10px rgba(0, 0, 0, 0.25);
+      bottom: auto;
+      top: 2rem;
+      right: 1rem;
+      z-index: 3;
+      font-size: 4rem;
+    }
 
-  #about > img {
-    display: inline;
-    float: left;
-    grid-area: 1 / 1 / 4/ 4;
-    z-index: 1;
-    shape-outside: border-box;
-  }
+    & p{
+      font-size: 1.2rem;
+    }
 
-  #about > h2 {
-    grid-area: 1 / 1 / 2 / 4;
-    display: inline;
-    z-index: 2;
-  }
+    & .content {
+      z-index: 1;
+      margin-top: 10rem;
+      max-width: 80vw;
+      background-color: white;
+      box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+      flex-direction: column;
+      padding: 2rem;
+    }
 
-  #about > .links{
-    display: none;
+    & .border {
+      width: 33vw;
+      height: calc(62vw - 10rem);
+      display: inline;
+      float: left;
+    }
+
+    & .links {
+      display: none;
+    }
   }
 }
