--- a/src/style.css
+++ b/src/style.css
@@ -58,34 +58,33 @@ section {
   position: relative;
   display: grid;
   grid: auto-flow / 2rem 1fr 2rem;
-}
+  & h2 {
+    font-size: 3rem;
+    padding: 1rem;
+    text-align: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.5);
+  }
 
-#about > h2 {
-  font-size: 3rem;
-  padding: 1rem;
-  text-align: right;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-  text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.5);
-}
+  & .content {
+    grid-column: span 3;
+  }
 
-#about > .content {
-  grid-column: span 3;
-}
+  & img {
+    width: 100%;
+  }
 
-#about > img {
-  width: 100%;
-}
+  & img,
+  & h2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
 
-#about > img,
-#about > h2 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-#about > .background {
-  display: none;
+  & .background {
+    display: none;
+  }
 }
 
 p {
@@ -113,98 +112,95 @@ img.link-icon {
   filter: invert(20%);
 }
 
-.work-card {
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
-  margin: 4rem 2rem;
-  min-height: 120vw;
-}
+#work {
+  & .work-card {
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+    margin: 4rem 2rem;
+    min-height: 100vw;
 
-.title-row {
-  display: flex;
-  padding: 1rem;
-  align-items: center;
-}
+    & p {
+      margin: 0;
+    }
 
-.title-row .link-icon {
-  font-size: 2rem;
-  width: 2rem;
-  height: 2rem;
-}
+    & .image-placeholder {
+      width: 100%;
+      height: 60vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      & h1 {
+        font-size: 2rem;
+        color: white;
+      }
+    }
+  }
 
-.title-row > h2 {
-  margin: 0 auto 0 1rem;
-}
-.title-row > a {
-  margin: 0 1rem;
-}
+  & .title-row {
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    & .link-icon {
+      font-size: 1.5rem;
+      width: 2rem;
+      height: 2rem;
+    }
 
-.work-card p {
-  font-size: 1.2rem;
-  margin: 0;
-}
+    & h2 {
+      margin: 0 auto 0 1rem;
+    }
+    & a {
+      margin: 0 1rem;
+    }
+  }
 
-.image-placeholder {
-  width: 100%;
-  height: 60vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.image-placeholder > h1 {
-  font-size: 3rem;
-  color: white;
-}
-
-.work-card:nth-of-type(1) .image-placeholder {
-  background-color: #515adb;
-}
-.work-card:nth-of-type(2) .image-placeholder {
-  background-color: #db9f51;
-}
-.work-card:nth-of-type(3) .image-placeholder {
-  background-color: #51db63;
-}
-.work-card:nth-of-type(4) .image-placeholder {
-  background-color: #d651db;
-}
-.work-card:nth-of-type(5) .image-placeholder {
-  background-color: #51bbdb;
-}
-.work-card:nth-of-type(6) .image-placeholder {
-  background-color: #db5151;
+  & .work-card:nth-of-type(1) .image-placeholder {
+    background-color: #515adb;
+  }
+  & .work-card:nth-of-type(2) .image-placeholder {
+    background-color: #db9f51;
+  }
+  & .work-card:nth-of-type(3) .image-placeholder {
+    background-color: #51db63;
+  }
+  & .work-card:nth-of-type(4) .image-placeholder {
+    background-color: #d651db;
+  }
+  & .work-card:nth-of-type(5) .image-placeholder {
+    background-color: #51bbdb;
+  }
+  & .work-card:nth-of-type(6) .image-placeholder {
+    background-color: #db5151;
+  }
 }
 
 #contact {
   background-color: darkcyan;
   padding: 1.5rem 1rem;
   margin-bottom: 0;
-}
+  & * {
+    color: white;
+  }
 
-#contact * {
-  color: white;
-}
+  & h1 {
+    color: white;
+    margin: 0;
+  }
 
-#contact h1 {
-  color: white;
-  margin: 0;
-}
+  & p {
+    font-size: 1.5em;
+  }
 
-#contact > p {
-  font-size: 2em;
-}
+  & .small-text {
+    margin: 1rem;
+    & p {
+      padding: 0;
+      margin: 0;
+    }
+  }
 
-.small-text {
-  margin: 1rem;
-}
-
-.small-text p {
-  padding: 0;
-  margin: 0;
-}
-
-#contact .links {
-  margin: 2rem auto;
+  & .links {
+    margin: 2rem auto;
+  }
 }
 
 footer img {
@@ -212,16 +208,18 @@ footer img {
   object-fit: cover;
 }
 
-
-
 @media (min-width: 600px) {
+  .background-shape div{
+    transform: translate(0, calc(-100% + 25vw)) skew(0, -20deg);
+  }
+
   #about {
     margin: 4rem 10vw;
-    position:static;
+    position: static;
     display: block;
     overflow: visible;
 
-    & img{
+    & img {
       position: absolute;
       top: 2rem;
       left: 2rem;
@@ -233,7 +231,7 @@ footer img {
     & h2 {
       position: absolute;
       color: #ffffff;
-      text-shadow: 0 0 5px rgba(0, 0, 0, 0.75) ,0 0 10px rgba(0, 0, 0, 0.25);
+      text-shadow: 0 0 5px rgba(0, 0, 0, 0.75), 0 0 10px rgba(0, 0, 0, 0.25);
       bottom: auto;
       top: 2rem;
       right: 1rem;
@@ -241,7 +239,7 @@ footer img {
       font-size: 4rem;
     }
 
-    & p{
+    & p {
       font-size: 1.2rem;
     }
 
@@ -264,6 +262,38 @@ footer img {
 
     & .links {
       display: none;
+    }
+  }
+
+  #work{
+    display: grid;
+    grid: auto-flow / 1fr 1fr;
+    padding: 2rem;
+    & h1{
+      grid-column: span 2;
+      text-align: left;
+      padding: 1rem;
+      margin: 0;
+    }
+    & .work-card{
+      min-height: 45vw;
+      margin: 0 2vw 2rem 2vw;
+      & .title-row{
+        & .link-icon{font-size: 2rem;
+          width: 2rem;
+          height: 2rem;}
+        & img.link-icon{transform: translate(0, 3px);
+          filter: invert(20%);}
+      }
+      & .image-placeholder{
+        height: 25vw;
+        & h1{
+          text-align: center;
+        }
+      }
+      & a {
+        margin: 0 0.5rem;
+      }
     }
   }
 }
